--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,17 @@
     <string name="sim">Sim</string>
     <string name="nao">Não</string>
     <string name="naoSim">Não/Sim</string>
-    <string name="nome">Nome: </string>
-    <string name="endereco">Endereco: </string>
+    <string name="endereco">Bairro, Rua, Número </string>
     <string name="totalC">TOTAL DA COMPRA: </string>
     <string name="valorT">R$ </string>
     <string name="formaDeP">FORMA DE PAGAMENTO:</string>
     <string name="enviarpedido">ENVIAR PEDIDO</string>
     <string name="escolhaOutroProduto">ESCOLHA SEGUNDO PRODUTO: </string>
+    <string name="hint">10.00</string>
+    <string name="nomeSobrenome">Nome Sobrenome</string>
+    <string name="hintNumero">Numero Exemplo: 5511987654321</string>
+    <string name="enviarPedido">Enviar Pedido</string>
+
 
     <string-array name="produtos">
         <item> </item>
@@ -38,6 +42,7 @@
     </string-array>
 
     <string-array name="formaPagamento">
+        <item> </item>
         <item>Cartão</item>
         <item> </item>
         <item>Dinheiro</item>
