--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="nao">Não</string>
     <string name="endereco">Bairro, Rua, Número </string>
     <string name="totalC">TOTAL DA COMPRA: </string>
-    <string name="valorT">R$&#160;</string>
+    <string name="valorT">&#160;</string>
     <string name="formaDeP">FORMA DE PAGAMENTO:</string>
     <string name="enviarpedido">ENVIAR PEDIDO</string>
     <string name="escolhaOutroProduto">ESCOLHA SEGUNDO PRODUTO: </string>
@@ -18,6 +18,7 @@
     <string name="hintNumero">Numero Exemplo: 987654321</string>
     <string name="enviarPedido">Enviar Pedido</string>
     <string name="numeroInicial">5511</string>
+    <string name="r">R$</string>
 
 
     <string-array name="produtos">
